.watch-stderr.log
rsync(65461): error: ~/Documents/Obsidian Vault/blogs/: (l)stat: No such file or directory
rsync(65461): warning: child 65462 exited with status 23
[Error] Sync failed: Command failed: rsync -av --exclude='.*' --exclude='*.excalidraw.md' "~/Documents/Obsidian Vault/blogs/" "/Users/lain/Documents/personal-website/content/posts/"
To https://github.com/Lainnevergiveup/Lainnevergiveup.github.io.git
   9bdab79..91672d8  main -> main
node:internal/fs/watchers:247
    const error = new UVException({
                  ^

Error: ENOENT: no such file or directory, watch '~/Documents/Obsidian Vault/blogs'
    at FSWatcher.<computed> (node:internal/fs/watchers:247:19)
    at Object.watch (node:fs:2503:36)
    at file:///Users/lain/Documents/personal-website/scripts/watch-and-deploy.mjs:71:4
    at ModuleJob.run (node:internal/modules/esm/module_job:325:25)
    at async ModuleLoader.import (node:internal/modules/esm/loader:606:24)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5) {
  errno: -2,
  syscall: 'watch',
  code: 'ENOENT',
  path: '~/Documents/Obsidian Vault/blogs',
  filename: '~/Documents/Obsidian Vault/blogs'
}

Node.js v20.20.1
rsync(65560): error: ~/Documents/Obsidian Vault/blogs/: (l)stat: No such file or directory
rsync(65560): warning: child 65561 exited with status 23
[Error] Sync failed: Command failed: rsync -av --exclude='.*' --exclude='*.excalidraw.md' "~/Documents/Obsidian Vault/blogs/" "/Users/lain/Documents/personal-website/content/posts/"
To https://github.com/Lainnevergiveup/Lainnevergiveup.github.io.git
   91672d8..2813bd0  main -> main
node:internal/fs/watchers:247
    const error = new UVException({
                  ^

Error: ENOENT: no such file or directory, watch '~/Documents/Obsidian Vault/blogs'
    at FSWatcher.<computed> (node:internal/fs/watchers:247:19)
    at Object.watch (node:fs:2503:36)
    at file:///Users/lain/Documents/personal-website/scripts/watch-and-deploy.mjs:71:4
    at ModuleJob.run (node:internal/modules/esm/module_job:325:25)
    at async ModuleLoader.import (node:internal/modules/esm/loader:606:24)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5) {
  errno: -2,
  syscall: 'watch',
  code: 'ENOENT',
  path: '~/Documents/Obsidian Vault/blogs',
  filename: '~/Documents/Obsidian Vault/blogs'
}

Node.js v20.20.1
rsync(65649): error: ~/Documents/Obsidian Vault/blogs/: (l)stat: No such file or directory
rsync(65649): warning: child 65650 exited with status 23
[Error] Sync failed: Command failed: rsync -av --exclude='.*' --exclude='*.excalidraw.md' "~/Documents/Obsidian Vault/blogs/" "/Users/lain/Documents/personal-website/content/posts/"
To https://github.com/Lainnevergiveup/Lainnevergiveup.github.io.git
   2813bd0..47cd694  main -> main
node:internal/fs/watchers:247
    const error = new UVException({
                  ^

Error: ENOENT: no such file or directory, watch '~/Documents/Obsidian Vault/blogs'
    at FSWatcher.<computed> (node:internal/fs/watchers:247:19)
    at Object.watch (node:fs:2503:36)
    at file:///Users/lain/Documents/personal-website/scripts/watch-and-deploy.mjs:71:4
    at ModuleJob.run (node:internal/modules/esm/module_job:325:25)
    at async ModuleLoader.import (node:internal/modules/esm/loader:606:24)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5) {
  errno: -2,
  syscall: 'watch',
  code: 'ENOENT',
  path: '~/Documents/Obsidian Vault/blogs',
  filename: '~/Documents/Obsidian Vault/blogs'
}

Node.js v20.20.1
rsync(65735): error: ~/Documents/Obsidian Vault/blogs/: (l)stat: No such file or directory
rsync(65735): warning: child 65736 exited with status 23
[Error] Sync failed: Command failed: rsync -av --exclude='.*' --exclude='*.excalidraw.md' "~/Documents/Obsidian Vault/blogs/" "/Users/lain/Documents/personal-website/content/posts/"
To https://github.com/Lainnevergiveup/Lainnevergiveup.github.io.git
   47cd694..d5d3dab  main -> main
node:internal/fs/watchers:247
    const error = new UVException({
                  ^

Error: ENOENT: no such file or directory, watch '~/Documents/Obsidian Vault/blogs'
    at FSWatcher.<computed> (node:internal/fs/watchers:247:19)
    at Object.watch (node:fs:2503:36)
    at file:///Users/lain/Documents/personal-website/scripts/watch-and-deploy.mjs:71:4
    at ModuleJob.run (node:internal/modules/esm/module_job:325:25)
    at async ModuleLoader.import (node:internal/modules/esm/loader:606:24)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5) {
  errno: -2,
  syscall: 'watch',
  code: 'ENOENT',
  path: '~/Documents/Obsidian Vault/blogs',
  filename: '~/Documents/Obsidian Vault/blogs'
}

Node.js v20.20.1
rsync(65816): error: ~/Documents/Obsidian Vault/blogs/: (l)stat: No such file or directory
rsync(65816): warning: child 65817 exited with status 23
[Error] Sync failed: Command failed: rsync -av --exclude='.*' --exclude='*.excalidraw.md' "~/Documents/Obsidian Vault/blogs/" "/Users/lain/Documents/personal-website/content/posts/"
To https://github.com/Lainnevergiveup/Lainnevergiveup.github.io.git
   d5d3dab..da5730d  main -> main
node:internal/fs/watchers:247
    const error = new UVException({
                  ^

Error: ENOENT: no such file or directory, watch '~/Documents/Obsidian Vault/blogs'
    at FSWatcher.<computed> (node:internal/fs/watchers:247:19)
    at Object.watch (node:fs:2503:36)
    at file:///Users/lain/Documents/personal-website/scripts/watch-and-deploy.mjs:71:4
    at ModuleJob.run (node:internal/modules/esm/module_job:325:25)
    at async ModuleLoader.import (node:internal/modules/esm/loader:606:24)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5) {
  errno: -2,
  syscall: 'watch',
  code: 'ENOENT',
  path: '~/Documents/Obsidian Vault/blogs',
  filename: '~/Documents/Obsidian Vault/blogs'
}

Node.js v20.20.1
rsync(65921): error: ~/Documents/Obsidian Vault/blogs/: (l)stat: No such file or directory
rsync(65921): warning: child 65922 exited with status 23
[Error] Sync failed: Command failed: rsync -av --exclude='.*' --exclude='*.excalidraw.md' "~/Documents/Obsidian Vault/blogs/" "/Users/lain/Documents/personal-website/content/posts/"
To https://github.com/Lainnevergiveup/Lainnevergiveup.github.io.git
   da5730d..b942dff  main -> main
node:internal/fs/watchers:247
    const error = new UVException({
                  ^

Error: ENOENT: no such file or directory, watch '~/Documents/Obsidian Vault/blogs'
    at FSWatcher.<computed> (node:internal/fs/watchers:247:19)
    at Object.watch (node:fs:2503:36)
    at file:///Users/lain/Documents/personal-website/scripts/watch-and-deploy.mjs:71:4
    at ModuleJob.run (node:internal/modules/esm/module_job:325:25)
    at async ModuleLoader.import (node:internal/modules/esm/loader:606:24)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5) {
  errno: -2,
  syscall: 'watch',
  code: 'ENOENT',
  path: '~/Documents/Obsidian Vault/blogs',
  filename: '~/Documents/Obsidian Vault/blogs'
}

Node.js v20.20.1
rsync(65994): error: ~/Documents/Obsidian Vault/blogs/: (l)stat: No such file or directory
rsync(65994): warning: child 65995 exited with status 23
[Error] Sync failed: Command failed: rsync -av --exclude='.*' --exclude='*.excalidraw.md' "~/Documents/Obsidian Vault/blogs/" "/Users/lain/Documents/personal-website/content/posts/"
